# ai-web-wrapper-toolkit

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/providers/: deepseek.yaml  v0.yaml
docs/: ADDING_PROVIDERS.md
src/: main.py
src/cookie_collector/: browser.py  router.py  service.py
src/core/: config.py  database.py  exceptions.py  models.py  schemas.py  settings_service.py
src/providers/: config.py  generator.py  router.py  seed.py  service.py
src/proxy/: router.py  service.py  transformer.py
src/proxy/providers/: base.py  generic.py  registry.py
src/proxy/providers/adapters/: __init__.py  deepseek.py  v0.py
src/recorder/: __init__.py  recorder.py  router.py  scripts.py  service.py
src/ui/: router.py
src/ui/static/css/: style.css
src/ui/templates/: base.html  index.html  settings.html
src/ui/templates/api/: detail.html  list.html
src/ui/templates/cookies/: list.html
src/ui/templates/keys/: list.html
src/ui/templates/partials/: cookie_edit.html  cookie_form.html  cookie_options.html  cookie_paste.html  error.html  key_form.html  recent.html  stats.html  template_edit.html  template_form.html
src/ui/templates/recorder/: index.html
src/ui/templates/templates/: list.html
