[project]
name = "ai-web-wrapper-toolkit"
version = "0.4.0"
description = "Turn any AI website into an OpenAI-compatible API"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy[asyncio]>=2.1.0b3",
    "aiosqlite>=0.22.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.31",
    "httpx>=0.28.1",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "starlette>=1.3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
